test_suite5/ALAN/test_suite/alan-2022-examples/failing/006200_mutation.alan
source k begin leave 5 >= get 15 end
